<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.stickearn.moviefavourite.viewmodel.MainViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.activity.MainActivity"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:layout_marginTop="20dp"
            android:text="@string/popular_movie"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyPopularMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:layout_marginTop="20dp"
            android:text="@string/top_rated"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyTopRatedMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:layout_marginTop="20dp"
            android:text="@string/now_playing"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
</layout>