<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.stickearn.moviefavourite.viewmodel.LoginViewModel"/>
    </data>
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.login.LoginActivity">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imgBackLogin"
                    android:layout_width="@dimen/back_width"
                    android:layout_height="@dimen/back_height"
                    android:layout_marginStart="@dimen/back_margin_left"
                    android:layout_marginTop="@dimen/back_margin_top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_icon_back" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:translationX="20dp"
                    android:translationY="-22dp"
                    android:textAlignment="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_palm_fruit" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="169dp"
                    android:layout_height="@dimen/dimenHeightLogo"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                    app:layout_constraintStart_toEndOf="@+id/imgBackLogin"
                    app:layout_constraintTop_toTopOf="@+id/imageView6"
                    app:srcCompat="@drawable/logo_yotani_kerja_final_copy_2" />

                <EditText
                    android:id="@+id/txtRegisteredPhoneNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="24dp"
                    android:drawableStart="@drawable/ion_android_call_ionicons"
                    android:drawablePadding="@dimen/padding_drawable_icon"
                    android:fontFamily="@font/montserrat_alternates_regular"
                    android:hint="@string/registeredEmail"
                    android:paddingBottom="@dimen/padding_bottom_edittext"
                    android:selectAllOnFocus="true"
                    android:text="@={viewModel.email}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/lblErrorRegisteredPhoneNoLogin"
                    style="@style/ErrorTextInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/srPleaseInputRegisteredEmail"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/txtRegisteredPhoneNo"
                    app:layout_constraintTop_toBottomOf="@+id/txtRegisteredPhoneNo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tILNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="@dimen/marginWidgetToParent"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtRegisteredPhoneNo"
                    app:layout_constraintTop_toBottomOf="@+id/txtRegisteredPhoneNo"
                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#3B000000">

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ion_locked_ionicons"
                        android:drawablePadding="@dimen/padding_drawable_icon"
                        android:fontFamily="@font/montserrat_alternates_regular"
                        android:hint="@string/registered_password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:paddingBottom="@dimen/padding_bottom_edittext">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblErrorPasswordLogin"
                    style="@style/ErrorTextInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/srPleaseInputPassword"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/tILNewPassword"
                    app:layout_constraintTop_toBottomOf="@+id/tILNewPassword" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/ButtonCustom1"
                    android:layout_width="0dp"
                    android:layout_height="57dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="60dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/font_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tILNewPassword"
                    app:layout_constraintStart_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/tILNewPassword"
                    app:layout_constraintVertical_bias="0.2" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="64dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:text="@string/welcome"
                    android:textSize="24dp"
                    app:layout_constraintStart_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="276dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat_alternates_regular"
                    android:text="@string/please_login_to_access_full_feature"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <CheckBox
                    android:id="@+id/chkRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_alternates_regular"
                    android:text="@string/remember_me"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="@+id/tILNewPassword"
                    app:layout_constraintTop_toBottomOf="@+id/tILNewPassword" />

                <TextView
                    android:id="@+id/lblForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/candara_bold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="@+id/chkRememberMe"
                    app:layout_constraintEnd_toEndOf="@+id/tILNewPassword"
                    app:layout_constraintTop_toTopOf="@+id/chkRememberMe" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/btnLogin"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_alternates_regular"
                        android:text="@string/did_not_have_account"
                        android:textSize="14dp"
                        tools:layout_editor_absoluteY="570dp" />

                    <TextView
                        android:id="@+id/lblRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/candara_bold"
                        android:text="@string/register"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:fitsSystemWindows="true"
            android:fontFamily="@font/montserrat_alternates_regular"
            android:gravity="bottom"
            android:text="@string/copyright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</layout>