<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_scrolling"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTitleMovieDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include2"
                tools:text="One Punch Man is The Strongest Avengers in Justice League" />

            <TextView
                android:id="@+id/lblReleaseDateDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@+id/lblTitleMovieDetail"
                app:layout_constraintTop_toBottomOf="@+id/lblTitleMovieDetail"
                tools:text="17 Aug 2019" />

            <TextView
                android:id="@+id/lblDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/description"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@+id/lblTitleMovieDetail"
                app:layout_constraintTop_toBottomOf="@+id/lblReleaseDateDetail" />

            <TextView
                android:id="@+id/lblDescriptionDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:textSize="13dp"
                android:text="ConstraintLayout allows you to create large and complex layouts with a flat view hierarchy (no nested view groups). It's similar to RelativeLayout in that all views are laid out according to relationships between sibling views and the parent layout, but it's more flexible than RelativeLayout and easier to use with Android Studio's Layout Editor.

All the power of ConstraintLayout is available directly from the Layout Editor's visual tools, because the layout API and the Layout Editor were specially built for each other. So you can build your layout with ConstraintLayout entirely by drag-and-dropping instead of editing the XML.


This page provides a guide to building a layout with ConstraintLayout in Android Studio 3.0 or higher. If you'd like more information about the Layout Editor itself, see the Android Studio guide to Build a UI with Layout Editor.

To see a variety of layouts you can create with ConstraintLayout, check out the Constraint Layout Examples project on GitHub.

Constraints overview
To define a view's position in ConstraintLayout, you must add at least one horizontal and one vertical constraint for the view. Each constraint represents a connection or alignment to another view, the parent layout, or an invisible guideline. Each constraint defines the view's position along either the vertical or horizontal axis; so each view must have a minimum of one constraint for each axis, but often more are necessary.

When you drop a view into the Layout Editor, it stays where you leave it even if it has no constraints. However, this is only to make editing easier; if a view has no constraints when you run your layout on a device, it is drawn at position [0,0] (the top-left corner).

In figure 1, the layout looks good in the editor, but there's no vertical constraint on view C. When this layout draws on a device, view C horizontally aligns with the left and right edges of view A, but appears at the top of the screen because it has no vertical constraint."
                app:layout_constraintStart_toStartOf="@+id/lblDescription"
                app:layout_constraintTop_toBottomOf="@+id/lblDescription" />

            <TextView
                android:id="@+id/lblReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/review"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@+id/lblTitleMovieDetail"
                app:layout_constraintTop_toBottomOf="@+id/lblDescriptionDetail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcyReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/lblReview"
                tools:layout_editor_absoluteX="76dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>